--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -39,7 +39,7 @@
       <a href="disclosure-img-long-description.html">Example Disclosure (Show/Hide) for an Image Description</a>
     </li>
     <li>
-      <a href="disclosure-navigation.html">Disclosure Pattern for Navigation Menus</a>
+      <a href="disclosure-navigation.html">Example Disclosure for Navigation Menus</a>
     </li>
   </ul>
   <section>
