--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -37,7 +37,7 @@
       <a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a>
     </li>
     <li>
-      <a href="disclosure-navigation.html">Disclosure Pattern for Navigation Menus</a>
+      <a href="disclosure-navigation.html">Example Disclosure for Navigation Menus</a>
     </li>
   </ul>
   <section>
