--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -43,7 +43,9 @@
   <p>Similar examples include: </p>
   <ul>
     <li><a href="../menubar-2/menubar-2.html">Editor Menubar Example</a>: Example of a menubar that presents text styling actions similar to an editor application.</li>
+    <li><a href="../../disclosure/disclosure-navigation.html">Example Disclosure for Navigation Menus</a>: Navigation menus implemented as simple drop down lists of links that are shown and hidden using disclosure buttons.</li>
   </ul>
+  
   <section id="code-ex-1">
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
