Make title match H1 and adjust for consistency with other disclosure examples

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Disclosure Pattern for Navigation Menu Example | WAI-ARIA Authoring
+<title>Example Disclosure for Navigation Menus | WAI-ARIA Authoring
   Practices 1.1</title>
 
   <!--  Core js and css shared by all examples; do not modify when using this template. -->
@@ -27,7 +27,7 @@
     </ul>
   </nav>
   <main>
-  <h1>Disclosure Pattern for Navigation Menus</h1>
+  <h1>Example Disclosure for Navigation Menus</h1>
   <p>
     The following example demonstrates using the
     <a href="../../#disclosure">disclosure design pattern</a>
