Cross link disclosure and menubar implementations of site nav

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -38,6 +38,7 @@
   <ul>
     <li><a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a></li>
     <li><a href="disclosure-img-long-description.html">Example Disclosure (Show/Hide) for an Image Description</a></li>
+    <li><a href="../menubar/menubar-1/menubar-1.html">Navigation Menubar Example</a></li> 
   </ul>
   <section>
     <h2 id="ex_label">Example</h2>
