Revise checkbox label

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -48,7 +48,7 @@
   </p>
   <label for="arrow-behavior-switch">
     <input type="checkbox" id="arrow-behavior-switch" checked>
-    Include optional support for arrow keys, <kbd>Home</kbd>, and <kbd>End</kbd> for navigation among links
+    Include optional support for arrow keys, <kbd>Home</kbd>, and <kbd>End</kbd> 
   </label>
   
   <section>
