Attributes table: add aria-current and replace named entities inside code tags with quote chars

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -276,7 +276,7 @@
         <tr data-test-id="button-aria-controls">
           <td></td>
           <th scope="row">
-            <code>aria-controls=&quot;IDREF&quot;</code>
+            <code>aria-controls="IDREF"</code>
           </th>
           <td>
             <code>button</code>
@@ -288,7 +288,7 @@
         <tr data-test-id="button-aria-expanded">
           <td></td>
           <th scope="row">
-            <code>aria-expanded=&quot;false&quot;</code>
+            <code>aria-expanded="false"</code>
           </th>
           <td>
             <code>button</code>
@@ -299,7 +299,7 @@
                 Indicates that the container controlled by the disclosure button is <em>hidden</em>.
               </li>
               <li>
-                CSS attribute selectors (e.g. <code>[aria-expanded=&quot;false&quot;]</code>) are
+                CSS attribute selectors (e.g. <code>[aria-expanded="false"]</code>) are
                 used to synchronize the visual states with the value of the <code>aria-expanded</code>
                 attribute.
               </li>
@@ -309,7 +309,7 @@
         <tr data-test-id="button-aria-expanded">
           <td></td>
           <th scope="row">
-            <code>aria-expanded=&quot;true&quot;</code>
+            <code>aria-expanded="true"</code>
           </th>
           <td>
             <code>button</code>
@@ -320,12 +320,22 @@
                 Indicates that the container controlled by the disclosure button is <em>visible</em>.
               </li>
               <li>
-                CSS attribute selectors (e.g. <code>[aria-expanded=&quot;true&quot;]</code>) are
+                CSS attribute selectors (e.g. <code>[aria-expanded="true"]</code>) are
                 used to synchronize the visual states with the value of the <code>aria-expanded</code>
                 attribute.
               </li>
             </ul>
           </td>
+        </tr>
+        <tr data-test-id="link-aria-current">
+          <td></td>
+          <th scope="row">
+            <code>aria-current="page"</code>
+          </th>
+          <td>
+            <code>a</code>
+          </td>
+          <td>Indicates that the page referenced by the link is currently displayed.</td>
         </tr>
       </tbody>
     </table>
