--- a/examples/combobox/aria1.1pattern/datepicker-combobox.html
+++ b/examples/combobox/aria1.1pattern/datepicker-combobox.html
@@ -6,17 +6,16 @@
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-<link rel="stylesheet" href="../css/core.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<link rel="stylesheet" href="../../css/core.css">
+<script src="../../js/examples.js"></script>
+<script src="../../js/highlight.pack.js"></script>
+<script src="../../js/app.js"></script>
+<script src="../../js/utils.js"></script>
 
-<script src="../js/examples.js" type="text/javascript"></script>
-<script src="../js/highlight.pack.js"></script>
-<script src="../js/app.js"></script>
-
-<link href="css/datepicker.css" rel="stylesheet">
+<link href="css/datepicker-combobox.css" rel="stylesheet">
 <script src="js/datepicker-combobox.js" type="text/javascript"></script>
-<script src="js/datepickerDay.js" type="text/javascript"></script>
-<script src="js/datepicker.js" type="text/javascript"></script>
+<script src="js/datepicker-combobox-day.js" type="text/javascript"></script>
+<script src="js/datepicker-combobox-dialog.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -87,7 +86,7 @@
 
         </div>
 
-        <div class="message" role="status"></div>
+        <div class="message" aria-live="polite" hidden></div>
 
         <div id="myDatepickerDialog"
              class="datepickerDialog"
@@ -108,11 +107,11 @@
               <span class="fas fa-angle-left fa-lg"></span>
             </button>
 
-            <span id="id-dialog-label"
-                  class="monthYear"
-                  role="status">
+            <h2 id="id-dialog-label"
+                class="monthYear"
+                aria-live="polite">
               December 2018
-            </span>
+            </h2>
 
             <button class="nextMonth"
               aria-label="next month"
@@ -207,6 +206,8 @@
             <button class="dialogButton" value="cancel">Cancel</button>
             <button class="dialogButton" value="ok">OK</button>
           </div>
+
+          <div class="message" aria-live="polite"></div>
 
         </div>
       </div>
