--- a/examples/combobox/aria1.1pattern/datepicker-combobox.html
+++ b/examples/combobox/aria1.1pattern/datepicker-combobox.html
@@ -13,6 +13,7 @@
 <script src="../../js/utils.js"></script>
 
 <link href="css/datepicker-combobox.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <script src="js/datepicker-combobox.js" type="text/javascript"></script>
 <script src="js/datepicker-combobox-day.js" type="text/javascript"></script>
 <script src="js/datepicker-combobox-dialog.js" type="text/javascript"></script>
