added message live region to dialog

--- a/examples/combobox/aria1.1pattern/datepicker-combobox.html
+++ b/examples/combobox/aria1.1pattern/datepicker-combobox.html
@@ -908,13 +908,13 @@
     <ul>
       <li>
         CSS:
-        <a href="css/datepicker.css" type="text/css">datepicker.css</a>
+        <a href="css/datepicker-combobox.css" type="text/css">datepicker-combobox.css</a>
       </li>
       <li>
         Javascript:
-          <li><a href="js/datepicker-combobox.js" type="text/javascript">combobox.js</a></li>
-          <li><a href="js/datepicker.js" type="text/javascript">datepicker.js</a></li>
-          <li><a href="js/datepickerDay.js" type="text/javascript">datepickerDay.js</a></li>
+          <li><a href="js/datepicker-combobox.js" type="text/javascript">datepicker-combobox.js</a></li>
+          <li><a href="js/datepicker-combobox-dialog.js" type="text/javascript">datepicker-combobox-dialog.js</a></li>
+          <li><a href="js/datepicker-combobox-day.js" type="text/javascript">datepicker-combobox-day.js</a></li>
       </li>
     </ul>
   </section>
