fixed some bugs related to messages

--- a/examples/combobox/aria1.1pattern/datepicker-combobox.html
+++ b/examples/combobox/aria1.1pattern/datepicker-combobox.html
@@ -87,7 +87,7 @@
 
         </div>
 
-        <div class="message" aria-live="polite" hidden></div>
+        <div class="comboboxMessage" aria-live="polite"></div>
 
         <div id="myDatepickerDialog"
              class="datepickerDialog"
@@ -208,7 +208,7 @@
             <button class="dialogButton" value="ok">OK</button>
           </div>
 
-          <div class="message" aria-live="polite"></div>
+          <div class="dialogMessage" aria-live="polite"></div>
 
         </div>
       </div>
