satisfy vnu-jar

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -58,7 +58,7 @@
                 value="bold"
                 tabindex="0">
               <span class="fas fa-bold" aria-hidden="true"></span>
-              <div class="popup-label">Bold</div>
+              <span class="popup-label">Bold</span>
             </button>
             <button
                 class="item italic popup"
@@ -66,7 +66,7 @@
                 value="italic"
                 tabindex="-1">
               <span class="fas fa-italic" aria-hidden="true"></span>
-              <div class="popup-label">Italic</div>
+              <span class="popup-label">Italic</span>
             </button>
             <button
                 class="item underline popup"
@@ -74,7 +74,7 @@
                 value="underline"
                 tabindex="-1">
               <span class="fas fa-underline" aria-hidden="true"></span>
-              <div class="popup-label">Underline</div>
+              <span class="popup-label">Underline</span>
             </button>
           </div>
           <div class="group"
@@ -86,7 +86,7 @@
                 aria-checked="true"
                 tabindex="-1">
               <span class="fas fa-align-left" aria-hidden="true"></span>
-              <div class="popup-label">Text Align Left</div>
+              <span class="popup-label">Text Align Left</span>
             </button>
             <button
                 role="radio"
@@ -94,7 +94,7 @@
                 aria-checked="false"
                 tabindex="-1">
               <span class="fas fa-align-center" aria-hidden="true"></span>
-              <div class="popup-label">Text Align Center</div>
+              <span class="popup-label">Text Align Center</span>
             </button>
             <button
                 role="radio"
@@ -102,7 +102,7 @@
                 aria-checked="false"
                 tabindex="-1">
               <span class="fas fa-align-right" aria-hidden="true"></span>
-              <div class="popup-label">Text Align Right</div>
+              <span class="popup-label">Text Align Right</span>
             </button>
           </div>
           <div class="group">
